Update swagger and add remove file action.
